edited the index.html url

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
   <head>
     <meta
       http-equiv="refresh"
-      content="0; url=https://github.com/iamlydial/portfolio-v1/blob/main/portfolio1/index.html"
+      content="0; url=https://iamlydial.github.io/portfolio-v1/index.html"
     />
   </head>
 
