index.html link fixed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta
       http-equiv="refresh"
-      content="0; url=https://iamlydial.github.io/portfolio-v1/index.html"
+      content="0; url=https://iamlydial.github.io/portfolio-v1/portfolio1/index.html"
     />
   </head>
 
